syntax = "proto3";
option go_package = "generated/pb";

import "google/protobuf/timestamp.proto";

package kannon;

service Mailer {
  rpc SendHTML(SendHTMLReq) returns (SendRes) {}
  rpc SendTemplate(SendTemplateReq) returns (SendRes) {}
}

message SendHTMLReq {
  Sender sender = 1;
  string subject = 3;
  string html = 4;
  optional google.protobuf.Timestamp scheduled_time = 5;
  repeated Recipient recipients = 6;
}

message SendTemplateReq {
  Sender sender = 1;
  string subject = 3;
  string template_id = 4;
  optional google.protobuf.Timestamp scheduled_time = 5;
  repeated Recipient recipients = 6;
}

message SendRes {
  string message_id = 1;
  string template_id = 2;
  google.protobuf.Timestamp scheduled_time = 3;
}

message Sender {
  string email = 1;
  string alias = 2;
}

message Recipient {
  string email = 1;
  map<string, string> fields = 2;
}
